deployment/service_frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shows-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: shows
